src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;700&display=swap");
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}
body {
  font-family: "Poppins", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background: #fafaff;
  font-weight: 400;
}

main {
  background: #151418;
  background-image: url(https://raw.githubusercontent.com/optimm/portfolio-website/master/src/Assets/bg.svg);
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
}

a {
  text-decoration: none;
  color: inherit;
  background-color: transparent;
}

ul,
ol {
  list-style: none;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: 100%;
  font-weight: normal;
}

img,
video {
  display: block;
  max-width: 100%;
}

.btn {
  border: 2px solid rgb(57, 134, 250);
  padding: 10px 1rem;
  border-radius: 5px;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  font-weight: 400;
  outline: none;
}

.PrimaryBtn {
  background: rgb(57, 134, 250);
  color: #f6f6f6;
}

.PrimaryBtn:hover {
  background: #fff;
  color: #010606;
}

.SecondarBtn:hover {
  background: rgb(57, 134, 250);
  color: #fff;
}

.btn2 {
  margin-right: 1rem;
}

.Container {
  width: 100%;
  padding-right: 1rem;
  padding-left: 1rem;
  margin-right: auto;
  margin-left: auto;
}

.BigCard {
  padding-top: 3rem;
  padding-bottom: 3rem;
  padding-right: 2rem;
  padding-left: 2rem;
  display: flex;
  flex-direction: column;
  border-radius: 18px;
  background: linear-gradient(145deg, #ffffff, #e6e6e6);
  box-shadow: 6px 6px 17px #b3b3b3, -6px -6px 17px #ffffff;
}

.AboutBio,
.tagline2 {
  /* text-align: center; */
  max-width: 680px;
  margin: 0 auto;
  color: #3a3a3a;
  font-size: 16px;
  line-height: 1.8;
}

.tagline2 {
  margin-top: 1rem;
  font-size: 18px;
  color: #252525;
  font-weight: 500;
  margin-bottom: 2rem;
}

.SectionTitle {
  font-size: 28px;
  color: #151418;
  font-weight: 700;
  margin-bottom: 3.5rem;
}
.ProjectWrapper {
  margin-top: -1rem;
}

/* ------------------------------------ Media for Container */
@media (min-width: 576px) {
  .Container {
    max-width: 540px;
  }
}
@media (min-width: 768px) {
  .Container {
    max-width: 720px;
  }
  .ProjectWrapper {
    margin-top: -5rem;
  }
}
@media (min-width: 992px) {
  .Container {
    max-width: 960px;
  }
}
@media (min-width: 1200px) {
  .Container {
    max-width: 1000px;
  }
}
.main-image {
  animation: MoveLeftRight 9s linear infinite;
}
@keyframes MoveLeftRight {
  0%,
  100% {
    margin-left: 260px;
  }
  50% {
    margin-left: 70px;
  }
}
#projects {
  margin-top: 100px;
}
@media (max-width: 992px) {
  .main-image {
    height: 240px;
    margin-left: auto;
    margin-right: auto;
    animation: MoveLeftRight 5s linear infinite;
  }
  .AboutBio {
    font-size: 15px;
  }

  @keyframes MoveLeftRight {
    0%,
    100% {
      margin-left: 15vw;
    }
    50% {
      margin-left: 25vw;
    }
  }
}
@media (max-width: 768px) {
  .AboutBio {
    font-size: 14px;
  }
}
@media (max-width: 567px) {
  .AboutBio {
    font-size: 13px;
  }
}
.strong {
  color: rgb(129, 129, 129);
}

